# faiss_cpu_gpu

./: .gitignore  README.md  download.sh  pyproject.toml  similarity_search_cpu.py  similarity_search_gpu.py
